Add option that items don't get wrapp automatically

--- a/demos/one.html
+++ b/demos/one.html
@@ -63,220 +63,59 @@
             <div class="span12">
               <div id="owl-demo" class="owl-carousel">
 
-                <div class="item"><img src="assets/fullimage1.jpg" alt="The Last of us"></div>
-                <div class="item"><img src="assets/fullimage2.jpg" alt="GTA V"></div>
-                <div class="item"><img src="assets/fullimage3.jpg" alt="Mirror Edge"></div>
+                 <div class="owl-wrapper-outer"> <!-- added  -->
+                   <div class="owl-wrapper"> <!-- added  -->
 
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage1.jpg" alt="The Last of us">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage2.jpg" alt="GTA V">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage3.jpg" alt="Mirror Edge">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage1.jpg" alt="The Last of us">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage2.jpg" alt="GTA V">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage3.jpg" alt="Mirror Edge">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage1.jpg" alt="The Last of us">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage2.jpg" alt="GTA V">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+                        <div class="owl-item __item__">
+                          <img src="assets/fullimage3.jpg" alt="Mirror Edge">
+                          <p>Etiam in porta justo. Suspendisse faucibus tortor vel turpis tincidunt varius. Nam condimentum erat elit, vel elementum elit sollicitudin faucibus. Donec finibus, ante eu dignissim varius, tellus diam aliquam metus, eget venenatis ipsum nisi non odio. In placerat, turpis id convallis rutrum, dui metus congue diam, vel rutrum eros eros a lectus. Sed imperdiet id orci id consequat. Donec a eros non justo egestas condimentum. Donec quis neque sollicitudin, cursus augue sit amet, luctus justo. Nulla feugiat efficitur laoreet. Morbi hendrerit massa vitae lorem laoreet pretium. Sed dapibus pellentesque maximus. Proin posuere volutpat congue. In hac habitasse platea dictumst.</p>
+                        </div>
+
+                   </div> <!-- added  -->
+                 </div> <!-- added -->
+                <div class="btn-prev">prev</div>
+                <div class="btn-next">next</div>
               </div>
             </div>
           </div>
         </div>
     </div>
 
-    <div id="example-info">
-      <div class="container">
-        <div class="row">
-          <div class="span12">
-            <h1>Setup</h1>
-            <p>In order for the images to auto fit to slider containers use width 100% on <img>. Check CSS below</p>
-            <ul class="nav nav-tabs" id="myTab">
-              <li class="active"><a href="#javascript">Javascript</a></li>
-              <li><a href="#HTML">HTML</a></li>
-              <li><a href="#CSS">CSS</a></li>
-            </ul>
-             
-            <div class="tab-content">
-
-              <div class="tab-pane active" id="javascript">
-<pre class="pre-show prettyprint linenums">
-$(document).ready(function() {
-
-  $("#owl-demo").owlCarousel({
-
-      navigation : true, // Show next and prev buttons
-      slideSpeed : 300,
-      paginationSpeed : 400,
-      singleItem:true
-
-      // "singleItem:true" is a shortcut for:
-      // items : 1, 
-      // itemsDesktop : false,
-      // itemsDesktopSmall : false,
-      // itemsTablet: false,
-      // itemsMobile : false
-
-  });
-
-});
-</pre>  
-
-              </div>
-
-              <div class="tab-pane" id="HTML">
-<pre class="pre-show prettyprint linenums">
-&lt;div id="owl-demo" class="owl-carousel owl-theme"&gt;
-
-  &lt;div class="item"&gt;&lt;img src="assets/fullimage1.jpg" alt="The Last of us"&gt;&lt;/div&gt;
-  &lt;div class="item"&gt;&lt;img src="assets/fullimage2.jpg" alt="GTA V"&gt;&lt;/div&gt;
-  &lt;div class="item"&gt;&lt;img src="assets/fullimage3.jpg" alt="Mirror Edge"&gt;&lt;/div&gt;
-
-&lt;/div&gt;
-</pre>
-              </div>
-
-              <div class="tab-pane" id="CSS">
-<pre class="pre-show prettyprint linenums">
-#owl-demo .item img{
-    display: block;
-    width: 100%;
-    height: auto;
-}
-</pre>
-              </div>
-            </div><!--End Tab Content-->
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="more">
-      <div class="container">
-
-        <div class="row">
-          <div class="span12">
-            <h1>More Demos</h1>
-          </div>
-        </div>
-
-        <div class="row demos-row">
-          <div class="span3">
-            <a href="images.html" class="demo-box">
-              <div class="demo-wrapper demo-images clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>Images</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="custom.html" class="demo-box">
-              <div class="demo-wrapper demo-custom clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>Custom</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="itemsCustom.html" class="demo-box">
-              <div class="demo-wrapper demo-full clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>Custom 2</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="one.html" class="demo-box">
-              <div class="demo-wrapper demo-one clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>One Slide</h3>
-            </a>
-          </div>
-
-        </div>
-        <div class="row demos-row">
-          <div class="span3">
-            <a href="json.html" class="demo-box">
-              <div class="demo-wrapper demo-Json clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>JSON</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="customJson.html" class="demo-box">
-              <div class="demo-wrapper demo-Json-custom clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>JSON Custom</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="lazyLoad.html" class="demo-box">
-              <div class="demo-wrapper demo-lazy clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>Lazy Load</h3>
-            </a>
-          </div>
-
-          <div class="span3">
-            <a href="autoHeight.html" class="demo-box">
-              <div class="demo-wrapper demo-height clearfix">
-                <div class="demo-slide"><div class="bg"></div></div>
-              </div>
-              <h3>Auto Height</h3>
-            </a>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="span12">
-            <h5>Bartosz Wojciechowski 2013 / @OwlFonk / 
-            <a href="mailto:owl@owlgraphic.com?subject=Hey Owl!">email</a> / 
-            <a href="../changelog.html">changelog</a> /
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=EFSGXZS7V2U9N">donate</a> / 
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://owlgraphic.com/owlcarousel/" data-text="Awesome jQuery Owl Carousel Responsive Plugin" data-via="OwlFonk" data-count="none" data-hashtags="owlcarousel"></a>
-            <script>
-            var owldomain = window.location.hostname.indexOf("owlgraphic");
-            if(owldomain !== -1){
-              !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-            }
-            </script>
-            </h5>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
     <script src="../assets/js/jquery-1.9.1.min.js"></script> 
     <script src="../owl-carousel/owl.carousel.js"></script>
 
-
-    <!-- Demo -->
 
     <style>
     #owl-demo .item img{
@@ -288,23 +127,47 @@ $(document).ready(function() {
 
 
     <script>
-    $(document).ready(function() {
-      $("#owl-demo").owlCarousel({
+      $( document ).ready( function () {
+        var $owlElement = $( "#owl-demo" );
 
-      navigation : true,
-      slideSpeed : 300,
-      paginationSpeed : 400,
-      singleItem : true
+        $owlElement.owlCarousel( {
 
-      // "singleItem:true" is a shortcut for:
-      // items : 1, 
-      // itemsDesktop : false,
-      // itemsDesktopSmall : false,
-      // itemsTablet: false,
-      // itemsMobile : false
+          disableAutomaticWrapping: true,
+          itemClass: '.__item__',
 
-      });
-    });
+          navigation: false,
+          pagination: false,
+
+          slideSpeed:      300,
+          paginationSpeed: 400,
+
+          items:             4,
+          itemsCustom:       false,
+          itemsDesktop:      [ 1024, 3 ],
+          itemsDesktopSmall: false,
+          itemsTablet:       [ 768, 2 ],
+          itemsTabletSmall:  false,
+          itemsMobile:       [ 480, 1 ],
+          singleItem:        false,
+          itemsScaleUp:      false,
+
+        } );
+
+        var owlInstance = $owlElement.data( 'owlCarousel' );
+
+        $( '.btn-next' ).on(
+            'click',
+            function () { owlInstance.next() }
+        );
+
+        $( '.btn-prev' ).on(
+            'click',
+            function () { owlInstance.prev() }
+        );
+
+      } );
+
+
     </script>
 
     <script src="../assets/js/bootstrap-collapse.js"></script>
